2008-12-20  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (get-color): Allocate colors only once -> fix
	a segfault with clisp/new-clx.

	* src/clfswm.lisp (handle-motion-notify): Add a	needed window
	argument.

	* src/clfswm-second-mode.lisp (sm-handle-motion-notify): Add a
	needed window argument.

2008-10-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (wait-no-key-or-button-press)
	(wait-a-key-or-button-press): Check buttons press/release correctly"

2008-10-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/menu-def.lisp: Add children navigation menu in the movement
	menu (select next/previous child/brother/level).

2008-10-26  Philippe Brochard  <pbrochard@common-lisp.net>

	*  *: Rename 'sister' frame to 'brother' frame.

	* src/clfswm-keys.lisp (unalias-modifiers): Convert a modifier
	alias in a real modifier.

	* src/package.lisp (*modifier-alias*): New list of modifier alias
	For example: :alt is :mod-1, :numlock is :mod-2...

	* src/tools.lisp (remove-hook): New function.

	* src/clfswm-keys.lisp (with-capslock, without-capslock)
	(with-numlock, without-cnumlock): New functions.

2008-10-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-info.lisp: Use the *binding-hook* to create info
	keys and mouse bindings.

	* src/bindings-second-mode.lisp: Use the *binding-hook* to create
	second keys and mouse bindings.

	* src/bindings.lisp: Use the *binding-hook* to create main keys
	and mouse bindings.

2008-10-10  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-menu.lisp (open-menu): Remember parent menu to undo
	menu opening.

2008-10-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/menu-def.lisp: Use a menu instead of a function for the
	standard menu.

2008-10-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (show-standard-menu): Display the standard
	menu from the 'update-menus' command.
