@@ -1,3 +1,8 @@
+2009-02-14  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm.lisp (handle-map-request): Add a fix to manage
+	correctly fullscreen windows (SDL particularly).
+
 2008-12-20  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/xlib-util.lisp (get-color): Allocate colors only once -> fix
